specified min-height for body to avoid footer covering other elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	color: #777777;
 	background-image: url(../images/prism.png);
+	min-height: 2000px;
 }
 #navigation-bar {
 	width: 100%;
